# multi-objective-reasoning-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: initial_indices.json  oas_filtered_stats.json  oracle_params.json  oracle_true_objectives.npy  vh_data.csv  vh_data.xlsx  vh_latents.npy  vh_library.csv
docs/: 01_outline.md  02_foundations.md  03_metrics_plotting.md  04_notebook00_warmup.md  05_library_curation_oas.md  06_embeddings.md  07_oracle_initial_design.md  08_pool_projection.md  09_bo_engine.md  10_strategies_verification.md  11_preflight_calibration.md  12_notebook01_golden_path.md  13_notebook02_strategy_cards.md  14_competition_notebook03.md  15_notebook04_extensions.md  later_list.md
mobo_lab/: __init__.py  acquisitions.py  competition.py  config.py  data.py  embeddings.py  metrics.py  models.py  optimize.py  oracle.py  plotting.py  pool.py  projection.py  seed.py  strategies.py  verification.py
notebooks/: 00_pareto_hypervolume_warmup.ipynb  00_pareto_hypervolume_warmup.py  01_seeded_noisy_sequential_greedy_mobo_iteration.ipynb  01_seeded_noisy_sequential_greedy_mobo_iteration.py  02_strategy_cards_practice.ipynb  02_strategy_cards_practice.py  03_competition.ipynb  03_competition.py  04_optional_extensions.ipynb  04_optional_extensions.py
outputs/: team_example_run.json
scripts/: build_initial_design.py  build_latents.py  build_library.py  build_oracle.py  download_oas.py  parse_data.py  preflight_sweep.py  visualize_data.py
tests/mobo_lab/: test_acquisitions.py  test_competition.py  test_config.py  test_data.py  test_embeddings.py  test_metrics.py  test_models.py  test_optimize.py  test_oracle.py  test_plotting.py  test_pool.py  test_projection.py  test_seed.py  test_strategies.py  test_verification.py
tests/notebooks/: test_nb00_smoke.py  test_nb01_golden.py  test_nb02_smoke.py  test_nb03_smoke.py  test_nb04_smoke.py
tests/scripts/: test_build_initial_design.py  test_build_latents.py  test_build_library.py  test_build_oracle.py  test_download_oas.py  test_parse_data.py  test_preflight_sweep.py  test_visualize_data.py
