[project]
name = "multi-objective-reasoning-lab"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ax-platform>=1.3.1",
    "botorch>=0.18.1",
    "gpytorch>=1.15.2",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
]
